# yolo

./: .envrc  .gitignore  CMakeLists.txt  GREETER_SETUP.md  README-kirigami.md  README.md  conway_layer_bg.py  flake.nix  justfile  login_screen.py  mock_greetd.py  pygreet.py  pygreet_qt.py  setup-greeter.sh  test_no_logout.sh  yolo-greeter.desktop.in
src/: main.cpp  qml_data.h
src/backend/: greetdclient.cpp  greetdclient.h  process.h  sessionmodel.cpp  sessionmodel.h  usermodel.cpp  usermodel.h
src/qml/: Main.qml
yolo-zig/: build.zig  build.zig.zon
yolo-zig/src/: greetd.zig  main.zig  models.zig
